# Sep, 16 2003
- bugfix: group.num_logins not initialized when adding a new group
- contributions from Cyprien Laplace:
- added a "module_name" in module symbols
- added backend_get_version() and backend_get_name() in wzd_backend.c
- added new files wzd_savecfg.c wzd_savecfg.h with wzd_savecfg() function
- added a new site command 'site savecfg' to call wzd_savecfg()
- modified the default way that ip and dynamic_ip are set (was buggy if not in wzd.cfg!)

# Sep, 11 2003
- contributions from Cyprien Laplace:
- added 'vfs_remove' function, to remove a vfs entry
- added special cookie forallvfs
- added cookies vfsvirtual, vfsphysical, vfstarget
- added 'file_vfs.txt'
- added 'site vfsls', 'site vfsadd', 'site vfsdel' commands, to list
  active virtual filesystems, add a vfs, and remove a vfs


# Sep, 10 2003
- bugfix: incorrect section match (closes: unable to create dirs in sections)
- bugfix: incorrect config file parsing (closes: unable to have section names beginning with
   anything but a letter)

# Sep, 08 20003
- Display real owner in LIST (this implementation is particularly bad - we rely on the cache)
- Display section on end of LIST ANSWER when in section

# Sep, 05 2003
- bugfix: segfault when two or more sections
- display section on end of LIST command

#--- cvs commit TAG: rel-0-1rc5
# Sep, 03 2003
- call fini function when unloading backend
- fix build on cygwin

# Aug, 28 2003
- added some debug stuff
- bugfix: do not include lex'ed C files (build fails on cygwin)
- some work on the debian package
- configure: PTHREADS detection changed to another macro
  This should work on all archs and close "gcc: unrecognized option'-pthread'"
  on cygwin

# Aug, 12 2003
- bugfix: autogen.sh not working on bsd
- bugfix: O_SYNC not declared on freebsd 4.8
- bugfix: undefined reference to getopt_long on freebsd 4.8
- bugfix: undefined reference to errno on Mandrake 9.1
- added auto-generated .c files to 'make distclean' target

# Aug, 07 2003