@@ -2,6 +2,9 @@
 
 
 '********'
+- replace 'extern unsigned int wzd_server_uid' (wzd_init_lex.l) with
+  functions get_serveruid() (to be implemented)
+'********'
 - create section "cygwin" in doc to document tls & co
   -- pem name _must_ be written in win-form when using winsock+tls
 '********'
